# reticulum-forge

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PKGBUILD  PLAN.md  README.md  justfile
.github/workflows/: ci.yml  release.yml
completions/: _forge  _forge.ps1  forge.bash  forge.fish
man/: forge.1
src/: cli.rs  config.rs  error.rs  main.rs  policy.rs  template.rs  test_runner.rs
src/checks/: connectivity.rs  latency.rs  mod.rs  redundancy.rs
src/commands/: deploy.rs  generate.rs  init.rs  mod.rs  monitor.rs  simulate.rs  test.rs
src/deploy/: health.rs  inventory.rs  mod.rs  provision.rs  rollback.rs  ssh.rs
src/hardware/: auto_interface.rs  mod.rs  rnode.rs  serial.rs  tcp.rs
src/monitor/: app.rs  mod.rs  node_status.rs  ui.rs
src/simulate/: engine.rs  link.rs  metrics.rs  mod.rs  node.rs  report.rs  topology.rs
tests/: cli_tests.rs  live_ssh_test.rs
