[package]
name = "reticulum-forge"
version = "1.0.0"
edition = "2021"
description = "CLI toolkit for building, testing, and deploying Reticulum mesh networks"
authors = ["synthalorian (Carter)"]
license = "Apache-2.0"
repository = "https://github.com/synthalorian/reticulum-forge"
keywords = ["reticulum", "mesh", "network", "cli", "lora"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "color", "wrap_help"] }

# Async (only the features we need — avoids unnecessary attack surface)
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "sync"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
serde_yaml = "0.9"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Terminal
indicatif = "0.17"
colored = "2"
console = "0.15"

# Templating
tera = "1"

# Graph algorithms
petgraph = "0.6"

# Random number generation
rand = "0.8"

# SSH (for deploy)
russh = "0.45"
russh-keys = "0.45"
async-trait = "0.1"

# Shell path expansion
shellexpand = "3"

chrono = "0.4"

# TUI
ratatui = "0.28"
crossterm = "0.28"
clap_complete = "4.6.5"
clap_mangen = "0.3.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
proptest = "1"
tempfile = "3"
tokio = { version = "1", features = ["full"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
